# sahya

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Sahay_Master_PRD_v1.md
.claude/: settings.json
.claude/skills/db-migration/: SKILL.md
.claude/skills/design-component/: SKILL.md
.claude/skills/go-live-checklist/: SKILL.md
.claude/skills/legal-content-entry/: SKILL.md
.claude/skills/new-ai-agent/: SKILL.md
.claude/skills/new-api-endpoint/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  safety_concern.yml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/migrations/: 0001_init.sql
apps/api/src/routes/: health.rs
apps/web/: package-lock.json
backend/: .env.example  Cargo.toml
backend/infra/: docker-compose.yml
backend/migrations/: 0002_auth_and_sessions.sql  0003_knowledge_articles.sql  0004_dev_seed_data.sql  0005_admin_panel.sql
backend/src/: admin_auth.rs  config.rs  crisis.rs  crypto.rs  dsr.rs  lib.rs  main.rs
backend/src/auth/: mod.rs
backend/src/llm/: mod.rs  ollama.rs
backend/src/routes/: account.rs  agent.rs  auth.rs  crisis_resources.rs  directory.rs  journal.rs  knowledge.rs  mod.rs
backend/src/routes/admin/: audit.rs  auth.rs  crisis.rs  knowledge.rs  mod.rs  professionals.rs  users.rs
design-system/: README.md
design-system/components/: crisis-banner.tsx  dialog.tsx  journal-editor.tsx  legal-resource-card.tsx
design-system/docs/: COMPONENT-SPECS.md  DESIGN-SYSTEM.md
design-system/preview/: style-guide.html
design-system/tokens/: design-tokens.json  globals.css  tailwind.config.ts
frontend/: README.md  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  (+1 more)
(+37 files in other folders)
