[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["postgres", "macros", "uuid", "chrono", "migrate", "runtime-tokio", "tls-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
